syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service UserFav{
  rpc GetFavList(UserFavRequest) returns(UserFavListResponse);
  rpc AddUserFav(UserFavRequest) returns(google.protobuf.Empty);
  rpc DeleteUserFav(UserFavRequest) returns(google.protobuf.Empty);
  rpc GetUserFavDetail(UserFavRequest) returns(google.protobuf.Empty);
}

message UserFavRequest{
  int32 userId = 1;
  int32 goodsId = 2;
}
message UserFavResponse{
  int32 userId = 1;
  int32 goodsId = 2;
}

message UserFavListResponse {
  int32 total = 1;
  repeated UserFavResponse data = 2;
}